# ai-viral-content-machine

./: .gitignore  ARCH.md  DONE.md  PLAN.md  PRODUCT_BRIEF.md  RULES-INDEX.md  TODO.md  docker-compose.dev.yml  env.example  package.json
.cursor/rules/: 00-always-persistence.mdc  10-crewai-foundation.mdc
apps/frontend/: next.config.js  package.json  tsconfig.json
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/campaigns/: page.tsx
apps/frontend/src/app/campaigns/[id]/: page.tsx
apps/frontend/src/app/campaigns/new/: page.tsx
apps/frontend/src/app/dashboard/: page.tsx
apps/gateway/: package.json  tsconfig.json
apps/gateway/src/: app.module.ts  main.ts
apps/gateway/src/analytics/: analytics.controller.ts  analytics.service.ts
apps/gateway/src/analytics/dto/: analytics.dto.ts
apps/gateway/src/angles/: angles.controller.ts  angles.module.ts  angles.service.ts
apps/gateway/src/angles/dto/: angle.dto.ts
apps/gateway/src/assets/: assets.controller.ts  assets.service.ts
apps/gateway/src/assets/dto/: asset.dto.ts
apps/gateway/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/gateway/src/auth/strategies/: jwt.strategy.ts
apps/gateway/src/campaigns/: campaigns.controller.ts  campaigns.service.ts
apps/gateway/src/campaigns/dto/: campaign.dto.ts
apps/gateway/src/common/dto/: base.dto.ts
apps/gateway/src/copy/: copy.controller.ts  copy.module.ts  copy.service.ts
apps/gateway/src/copy/dto/: copy.dto.ts
apps/gateway/src/exports/: exports.controller.ts  exports.service.ts
apps/gateway/src/exports/dto/: export.dto.ts
apps/gateway/src/hashtags/: hashtags.controller.ts  hashtags.service.ts
apps/gateway/src/hashtags/dto/: hashtag.dto.ts
apps/gateway/src/health/: health.controller.ts
apps/gateway/src/schedule/: schedule.controller.ts  schedule.service.ts
apps/gateway/src/schedule/dto/: schedule.dto.ts
apps/orchestrator/: main.py  pyproject.toml  requirements.txt
apps/orchestrator/app/api/v1/: api.py
apps/orchestrator/app/core/: config.py  database.py  logging.py
apps/workers/: requirements.txt
